# leveldb

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
CMake/: Default.cmake  DefaultCXX.cmake
Project Files/leveldb-mcpe/: CMakeLists.txt  LevelDB.vcxproj.filters
Projects/include/: unistd.h
Projects/leveldb-mcpe/db/: c.cc  db_impl.cc
Projects/leveldb-mcpe/include/leveldb/: decompress_allocator.h  dllx.h  options.h  slice.h
Projects/leveldb-mcpe/util/: env_win.cc
include/leveldb/: pathfinders_support.h
leveldb-mcpe/: CMakeLists.txt  LevelDB.vcxproj
lib/leveldb-mcpe/db/: zlib_compressor.cc
lib/leveldb-mcpe/include/leveldb/: pathfinders_support.h
lib/zlib/: CMakeLists.txt
src/db/: c.cc  db_impl.cc  db_impl.h
src/port/: port_posix.cc  port_posix_sse.cc  port_win.cc
src/table/: block.cc
src/util/: crc32c.cc  env_boost.cc  env_win.cc  env_winrt.cc  win_logger.cc
x64/Debug/: leveldb-mcpe.exp  leveldb-mcpe.lib
